--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,9 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
     <!-- <script type="application/javascript" charset="utf-8" src="popup.js"></script> -->
     <script src="popup.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.1.266/build/pdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.1.266/build/pdf.worker.min.js"></script>
+    
 </head>
 <body class="body-popup">
     
